--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.3",
+    "axios": "^0.24.0",
+    "mongodb": "^4.2.2",
+    "mongoose": "^6.1.2",
+    "next": "^12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.1.1",
+    "typescript": "^4.4.4",
+    "vercel": "^23.1.2"
   },
   "devDependencies": {
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.34",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3"
   }
