--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@/layout/*": ["components/layout/*"],
+    },
   },
   "include": [
     "next-env.d.ts",
