--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
 name: My first github Action
 on: [push]
 jobs:
-  print-hello-world:
-      runs-on: ubuntu latest
+  build-app:
+      runs-on: ubuntu-latest
       steps:
-        - run: echo "hello world"
-        - run: echo "This is step 2"
+        - uses: actions/checkout@v2
+        - run: tree
