--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,4 +5,10 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
-        - run: tree
+        - uses: actions/setup-node@v2
+          width:
+            node-version: "14.17.0"
+        - name: Build the project
+          run: npm run build
+        - name: Build finish
+          run: echo "Project build"
