--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,10 @@ on: [push]
 jobs:
   build-app:
       runs-on: ubuntu-latest
+      env:
+        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+        VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       steps:
         - uses: actions/checkout@v2
         - uses: actions/setup-node@v2
@@ -12,5 +16,14 @@ jobs:
           run: npm install
         - name: Build the project
           run: npm run build
+        - name: Set the vercel env
+          run: |
+            cd .next
+            mkdir .vercel
+            cd .vercel
+            touch project.json
+            echo "{\"projectId\":\"VERCEL_PROJECT_ID\",\"orgId\":\"VERCEL_ORG_ID\"}" > project.json
+        - name: Deploying the project
+          run: npm deploy
         - name: Build finish
           run: echo "Project build"
