--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "vc build --prod --confirm --token=$VERCEL_TOKEN"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -17,6 +18,7 @@
     "react-dom": "17.0.2",
     "swr": "^1.1.1",
     "typescript": "^4.4.4",
+    "vc": "^0.1.4",
     "vercel": "^23.1.2"
   },
   "devDependencies": {
