--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 name: My first github Action
-on: [push, pull_request]
+on: [push]
 jobs:
   build-app:
       runs-on: ubuntu-latest
@@ -16,17 +16,14 @@ jobs:
           run: npm install
         - name: Build the project
           run: npm run build
-        - name: Set Env Vars on Vercel Project
-          uses: dkershner6/vercel-set-env-action@v1
-          with:
-            token: ${{ secrets.VERCEL_TOKEN }}
-            projectName: dummy # project name in Vercel
-        - name: deploy site to vercel      
-          uses: amondnet/vercel-action@v20
-          with:
-            vercel-token: ${{ secrets.VERCEL_TOKEN }} 
-            vercel-args: '--prod' 
-            vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}
-            vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}} 
+        - name: Set the vercel env
+          run: |
+            cd .next
+            mkdir .vercel
+            cd .vercel
+            touch project.json
+            echo "{\"projectId\":\"VERCEL_PROJECT_ID\",\"orgId\":\"VERCEL_ORG_ID\"}" > project.json
+        - name: Deploying the project
+          run: npm run deploy
         - name: Build finish
           run: echo "Project build"
